--- a/requirements.txt
+++ b/requirements.txt
@@ -157,6 +157,7 @@ termcolor==1.1.0
 threadpoolctl==3.1.0
 toolz==0.12.0
 torch==2.0.0
+torch-tb-profiler==0.4.1
 torchvision==0.15.1
 tornado==6.1
 traitlets==5.1.1
